# panda-analytics

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/lint-tests/: .flake8  pyproject.toml
.github/workflows/: deploy.yaml  lt.yaml
core/: config.py
core/configs/basic/: panda-analytics.yaml
core/dags/basic/panda_analytics/: dag_pa_notifier.py
core/scripts/alerts/: sender.py  utils.py
core/scripts/objects/: configurator.py  formatter.py  logger.py  plotter.py  sender.py
core/scripts/telegram/: notifier.py  sender.py  tgsender.py
core/scripts/telegram/panda_analytics/: manager.py
core/scripts/tools/datetimez/: utils.py
core/scripts/tools/mplot/: plot.py  plotter.py
core/scripts/tools/psql/: client.py
core/scripts/wb/: api.py  client.py  manager.py  statistics.py  utils.py
core/sql/basic/panda_analytics/: psql_select_daily_basic_metric-copy.sql  psql_select_daily_basic_metrics.sql
core/templates/basic/telegram/: html_caption_daily_metrics.txt  html_daily_metrics.txt
docs/: faq.md  quick-start.md
scripts/telegram/: test.py
