[tool.poetry]
name = "panda-analytics"
version = "0.1.0"
description = "Panda Analytics"
authors = ["Slava Golyshevskii <sgolyshevskii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
black = "24.4.2"
isort = "5.13.2"
flake8 = "7.0.0"


[tool.black]
line-length = 88

target-version = ['py39']
exclude = '''
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  '''
skip-string-normalization = false
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
